--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF9270</color>
-    <color name="blue">#A4E2FF</color>
+    <color name="blue">#92C3FF</color>
 </resources>
