--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF9270</color>
     <color name="blue">#92C3FF</color>
+    <color name="gray">#B0B0B0</color>
 </resources>
