--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingVertical="14dp">
+    android:paddingTop="3dp"
+    android:paddingBottom="14dp">
 
     <TextView
         android:id="@+id/dialog_setting_txt"
@@ -16,14 +17,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <View
+        android:background="@color/ligth_gray"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"/>
+
     <TextView
         android:id="@+id/dialog_timer_txt"
         android:text="@string/setting_txt_timer"
         android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="140dp"
+        android:layout_marginTop="20dp"
+        android:paddingStart="25dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/dialog_timer_edit_text"
         app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"
@@ -32,19 +41,28 @@
     <EditText
         android:id="@+id/dialog_timer_edit_text"
         android:text="30"
-        android:hint="30:00"
+        android:hint="30"
         android:textSize="20sp"
         android:gravity="center"
-        android:paddingHorizontal="6dp"
+        android:paddingHorizontal="20dp"
         android:inputType="number"
         android:background="@drawable/backgroung_edit_text"
+        android:layout_marginEnd="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="130dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toEndOf="@id/dialog_timer_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"/>
+
+    <TextView
+        android:text="@string/minutes"
+        android:textColor="@color/gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        app:layout_constraintStart_toEndOf="@id/dialog_timer_edit_text"
+        app:layout_constraintBottom_toBottomOf="@id/dialog_timer_edit_text"/>
 
     <TextView
         android:id="@+id/dialog_short_break_txt"
@@ -59,11 +77,11 @@
     <EditText
         android:id="@+id/dialog_short_break_edit_text"
         android:text="5"
-        android:hint="05:00"
+        android:hint="5"
         android:textSize="20sp"
         android:inputType="number"
         android:gravity="center"
-        android:paddingHorizontal="6dp"
+        android:paddingHorizontal="26dp"
         android:background="@drawable/backgroung_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,6 +89,15 @@
         app:layout_constraintStart_toStartOf="@id/dialog_timer_edit_text"
         app:layout_constraintEnd_toEndOf="@id/dialog_timer_edit_text"
         app:layout_constraintTop_toBottomOf="@id/dialog_timer_edit_text"/>
+
+    <TextView
+        android:text="@string/minutes"
+        android:textColor="@color/gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        app:layout_constraintStart_toEndOf="@id/dialog_timer_edit_text"
+        app:layout_constraintBottom_toBottomOf="@id/dialog_short_break_edit_text"/>
 
     <TextView
         android:id="@+id/dialog_long_break_txt"
@@ -85,11 +112,11 @@
     <EditText
         android:id="@+id/dialog_long_break_edit_text"
         android:text="15"
-        android:hint="15:00"
+        android:hint="15"
         android:textSize="20sp"
         android:inputType="number"
         android:gravity="center"
-        android:paddingHorizontal="6dp"
+        android:paddingHorizontal="20dp"
         android:background="@drawable/backgroung_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -97,5 +124,27 @@
         app:layout_constraintStart_toStartOf="@id/dialog_short_break_edit_text"
         app:layout_constraintEnd_toEndOf="@id/dialog_short_break_edit_text"
         app:layout_constraintTop_toBottomOf="@id/dialog_short_break_edit_text"/>
+
+    <TextView
+        android:text="@string/minutes"
+        android:textColor="@color/gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        app:layout_constraintStart_toEndOf="@id/dialog_timer_edit_text"
+        app:layout_constraintBottom_toBottomOf="@id/dialog_long_break_edit_text"/>
+
+    <Button
+        android:text="@string/save"
+        android:textSize="16sp"
+        android:textAppearance="@string/save"
+        android:backgroundTint="@color/orange"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialog_long_break_edit_text"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
