--- a/app/src/main/res/layout/fragment_long_break.xml
+++ b/app/src/main/res/layout/fragment_long_break.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/blue">
+    android:background="@color/dark_blue">
 
     <ProgressBar
         android:id="@+id/longBreak_progressbar"
