--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="orange">#FF9270</color>
+    <color name="orange">#FF8170</color>
     <color name="blue">#92C3FF</color>
-    <color name="gray">#B0B0B0</color>
+    <color name="dark_blue">#6FA4E6</color>
+    <color name="gray">#BCBCBC</color>
+    <color name="ligth_gray">#E5E5E5</color>
 </resources>
