--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -3,14 +3,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="3dp"
+    android:paddingTop="8dp"
     android:paddingBottom="14dp">
 
     <TextView
         android:id="@+id/dialog_setting_txt"
         android:text="@string/setting_txt"
         android:textSize="20sp"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,10 +17,11 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <View
+        android:id="@+id/dialog_view"
         android:background="@color/ligth_gray"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"/>
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/dialog_timer_edit_text"
-        app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"
+        app:layout_constraintTop_toBottomOf="@id/dialog_view"
         app:layout_constraintBottom_toBottomOf="@id/dialog_timer_edit_text" />
 
     <EditText
@@ -53,7 +53,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toEndOf="@id/dialog_timer_txt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"/>
+        app:layout_constraintTop_toBottomOf="@id/dialog_view"/>
 
     <TextView
         android:text="@string/minutes"
@@ -135,11 +135,11 @@
         app:layout_constraintBottom_toBottomOf="@id/dialog_long_break_edit_text"/>
 
     <Button
+        android:id="@+id/dialog_button"
         android:text="@string/save"
         android:textSize="16sp"
         android:textAppearance="@string/save"
         android:backgroundTint="@color/orange"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
