--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/orange">
+    android:background="@color/orange"
+    android:keepScreenOn="true">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
@@ -17,6 +18,7 @@
 
     <ImageView
         android:id="@+id/main_settings_btn"
+        android:visibility="gone"
         android:src="@drawable/baseline_settings_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
