--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+
     <ImageView
         android:id="@+id/main_settings_btn"
+        android:visibility="gone"
         android:src="@drawable/baseline_settings_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
