--- a/app/src/main/res/drawable/progressbar.xml
+++ b/app/src/main/res/drawable/progressbar.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="ring"
-            android:innerRadiusRatio="2.2"
-            android:thicknessRatio="35"
-            android:useLevel="true">
-            <solid android:color="@color/white"/>
-        </shape>
+        <clip>
+            <shape android:shape="ring"
+                android:innerRadiusRatio="2.2"
+                android:thicknessRatio="35"
+                android:useLevel="true">
+                <solid android:color="@color/white"/>
+            </shape>
+        </clip>
     </item>
-</selector>
+</layer-list>
