--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
         tools:layout ="@layout/fragment_timer"
-        android:name="com.example.pomodoro.TimerFragment"
+        android:name="com.example.pomodoro.view.TimerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
     <ImageView
         android:id="@+id/main_settings_btn"
@@ -24,5 +25,6 @@
         android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
