--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -10,7 +10,7 @@
 
     <ProgressBar
         android:id="@+id/timer_progressbar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="320dp"
         android:layout_height="320dp"
         android:progress="100"
